<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorAccent"
    tools:context=".ui.main.GithubShowSearchActivity">

    <EditText
        android:id="@+id/searchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:autofillHints="@string/user_search"
        android:hint="@string/user_search"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retrieveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchUser"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:text="@string/retrieve_user_data"
        android:textColor="@android:color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchForUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchUser"
        android:layout_alignBaseline="@+id/retrieveUser"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:text="@string/search_for_user"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <include
        android:id="@+id/containerView"
        layout="@layout/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retrieveUser"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retrieveUser"
        android:layout_gravity="center_horizontal"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retrieveUser"
        android:layout_gravity="center_horizontal"
        android:layout_margin="64dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="visible">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/error_description"
            app:srcCompat="@drawable/ic_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/user_error_subtitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/errorRetryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="@dimen/elevation"
            android:text="@string/error_retry"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>